// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JavaRuntimesCard expect to render 1`] = `
<ReportCard
  skipBullseye={true}
  title={
    <span>
      <span>
        Operating system information
      </span>
       
      <span>
        <Tooltip
          appendTo={[Function]}
          aria="describedby"
          boundary="window"
          className=""
          content={
            <div>
              See the Workload migration inventory for details
            </div>
          }
          distance={15}
          enableFlip={true}
          entryDelay={500}
          exitDelay={500}
          flipBehavior={
            Array [
              "top",
              "right",
              "bottom",
              "left",
              "top",
              "right",
              "bottom",
            ]
          }
          id=""
          isAppLauncher={false}
          isContentLeftAligned={false}
          isVisible={false}
          maxWidth="18.75rem"
          position="top"
          tippyProps={Object {}}
          trigger="mouseenter focus"
          zIndex={9999}
        >
          <HelpIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
        </Tooltip>
      </span>
    </span>
  }
>
  <Grid
    hasGutter={true}
    xl={6}
  >
    <GridItem>
      <Bullseye>
        <FancyChartDonut
          chartProps={
            Object {
              "padding": Object {
                "bottom": 20,
                "left": 20,
                "right": 165,
                "top": 20,
              },
              "subTitle": "Total",
              "title": "65",
            }
          }
          data={
            Array [
              Object {
                "extraData": 10,
                "label": "Windows Server",
                "value": 0.15384615384615385,
              },
              Object {
                "extraData": 20,
                "label": "CentOS",
                "value": 0.3076923076923077,
              },
              Object {
                "extraData": 20,
                "label": "Ubuntu",
                "value": 0.3076923076923077,
              },
              Object {
                "extraData": 15,
                "label": "Other",
                "value": 0.23076923076923078,
              },
            ]
          }
          tickFormat={[Function]}
          tooltipFormat={[Function]}
        />
      </Bullseye>
    </GridItem>
    <GridItem>
      <Bullseye>
        <SolidCard
          title="Operating systems that can be migrated to Red Hat Enterprise Linux: 30"
          width={510}
        />
      </Bullseye>
    </GridItem>
  </Grid>
</ReportCard>
`;

exports[`JavaRuntimesCard expect to render empty card when no java runtimes 1`] = `
<Component
  cardTitle={
    <span>
      <span>
        Operating system information
      </span>
       
      <span>
        <Tooltip
          appendTo={[Function]}
          aria="describedby"
          boundary="window"
          className=""
          content={
            <div>
              See the Workload migration inventory for details
            </div>
          }
          distance={15}
          enableFlip={true}
          entryDelay={500}
          exitDelay={500}
          flipBehavior={
            Array [
              "top",
              "right",
              "bottom",
              "left",
              "top",
              "right",
              "bottom",
            ]
          }
          id=""
          isAppLauncher={false}
          isContentLeftAligned={false}
          isVisible={false}
          maxWidth="18.75rem"
          position="top"
          tippyProps={Object {}}
          trigger="mouseenter focus"
          zIndex={9999}
        >
          <HelpIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
        </Tooltip>
      </span>
    </span>
  }
  description="Could not extract operating system information."
  message="Not enough data"
/>
`;

exports[`JavaRuntimesCard expect to render empty card when undefined reportWorkloadSummary 1`] = `
<Component
  cardTitle={
    <span>
      <span>
        Operating system information
      </span>
       
      <span>
        <Tooltip
          appendTo={[Function]}
          aria="describedby"
          boundary="window"
          className=""
          content={
            <div>
              See the Workload migration inventory for details
            </div>
          }
          distance={15}
          enableFlip={true}
          entryDelay={500}
          exitDelay={500}
          flipBehavior={
            Array [
              "top",
              "right",
              "bottom",
              "left",
              "top",
              "right",
              "bottom",
            ]
          }
          id=""
          isAppLauncher={false}
          isContentLeftAligned={false}
          isVisible={false}
          maxWidth="18.75rem"
          position="top"
          tippyProps={Object {}}
          trigger="mouseenter focus"
          zIndex={9999}
        >
          <HelpIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
        </Tooltip>
      </span>
    </span>
  }
  description="Could not extract operating system information."
  message="Not enough data"
/>
`;
